# google-monorepo-sim

./: .all-compile.sh  .all-dist.sh  .all-tests.sh  .gitignore  CLAUDE.md  LICENSE  README.md  llm_contraints.md  pom.xml  quieter-mvn
applications/: pom.xml
applications/directed_graph_build_systems_are_cool/: pom.xml
applications/monorepos_rule/: pom.xml
components/: pom.xml
components/consonants/: pom.xml
components/fricatives/: pom.xml
components/glides/: pom.xml
components/labiodental/: pom.xml
components/nasal/: pom.xml
components/sibilants/: pom.xml
components/velar/: pom.xml
java/: .all-compile.sh  .all-dist.sh
javatests/: .all-tests.sh
libs/rust/registry/: Cargo.toml  DEPENDENCIES.txt  DEPENDENCY-ANALYSIS.md  README.md  generate-dependency-data.sh  generate-dependency-graph.sh  get-transitive-deps.sh  sparse-checkout-helper.sh  update-registry.sh
libs/rust/registry/.cargo/: config.toml
libs/rust/registry/src/: lib.rs
shared-build-scripts/: add-cargo-deps-to-build-env.sh  add-npm-deps-to-base-tsconfig-json.sh  build-ld-lib-path.sh  build-node-path.sh  calc-dotnet-version-vars.sh  compile-java-prod-code-If-needed.sh  compile-java-test-code-If-needed.sh  determine-dotnet-framework-version.cs  gcheckout-rust-aware.sh  gcheckout.sh  generate-typescript-base-tsconfig-json.sh  init.sh  invoke-all-compile-scripts-for-dependencies.sh  make-target-cargo-deps-file.sh  make-target-npmdeps-file.sh  make-target-shared-library-deps-file.sh  make-target-tsdeps-file.sh  run-junit-tests-for-dependencies.sh  tests-init.sh
typescript/: tsconfig.json
(+160 files in other folders)
